--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,10 @@
-
 spring:
   application:
     name: Ecommerce
   datasource:
-    url: jdbc:Mysql://localhost:3306/jwt_ecommerce
-    username: root
+    url: jdbc:postgresql://localhost:5432/jwt_ecommerce
+    username: postgres
     password: Sqlserver123@
-    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
@@ -15,8 +13,7 @@ spring:
       hibernate:
         format_sql: true
         show-sql: true
-    database: mysql
-    database-platform: org.hibernate.dialect.MySQL8Dialect
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
 logging:
   level:
     org.springframework.security: DEBUG
