--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,13 @@ spring:
         format_sql: true
         show-sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+
+
+twilio:
+      accountSid:
+      authToken:
+      whatsappNumber:
+      phoneNumber:
 logging:
   level:
     org.springframework.security: DEBUG
