--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,17 +4,31 @@ spring:
   datasource:
     url: jdbc:postgresql://host.docker.internal:5432/jwt_ecommerce
     username: postgres
-    password: Johns@1995
+    password: Sqlserver123@
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
     properties:
       hibernate:
+        ddl-auto: update
         format_sql: true
         show-sql: true
+        jdbc:
+          time_zone: UTC
+
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 logging:
   level:
     org.springframework.security: DEBUG
     org.springframework.web: DEBUG
+    logging:
+      level:
+        org:
+          springframework=DEBUG:
+                  hibernate:
+                    type:
+                      descriptor:
+                        sql:
+                          BasicBinder=TRACE:
+
