--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: Ecommerce
   datasource:
-    url: jdbc:postgresql://host.docker.internal:5432/jwt_ecommerce
+    url: jdbc:postgresql://localhost:5432/jwt_ecommerce
     username: postgres
     password: Sqlserver123@
   jpa:
