code-changes from staging

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/jwt_ecommerce
     username: postgres
-    password: Sqlserver123@
+    password: Johns@1995
   jpa:
     hibernate:
       ddl-auto: update
