--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.razorpay</groupId>
+			<artifactId>razorpay-java</artifactId>
+			<version>1.3.8</version> <!-- Replace with the latest version if necessary -->
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
@@ -104,6 +109,10 @@
 <!--			<artifactId>jackson-datatype-jsr310</artifactId>-->
 <!--			<version>2.17.2</version>-->
 <!--		</dependency>-->
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jdk8</artifactId>
+		</dependency>
 
 
 		<dependency>
