--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/jwt_ecommerce
     username: postgres
-    password: 
+    password: Johns@1995
     driver-class-name: org.postgresql.Driver
 
 
